# tatjam.github.io

./: .gitignore  CMakeLists.txt  category-Chemistry.html  category-Electronics.html  category-Gamedev.html  category-Mathematics.html  category-OSP.html  feed.xml  index.html  localhost.sh  nohup.out  prism.js  theme.css
Chemistry/: label-generator.html
Electronics/: radar1.html  vlf-receiver.html
Gamedev/: enter-the-editor.html  introducing-ospgl.html  models-and-vehicles.html  ospgl-progress.html  roadway-to-release.html  two-years-of-progress.html
Gamedev/img/: convert.sh
Mathematics/: fourier1.html
OSP/: enter-the-editor.html  introducing-ospgl.html  models-and-vehicles.html  ospgl-progress.html  roadway-to-release.html  two-years-of-progress.html
OSP/img/: editor.webm  fly.webm  sdoor.webm
OSP/img/roadway/: output.webm
dev/res/Chemistry/: label-generator.md
dev/res/Electronics/: radar1.md  vlf-receiver.md
dev/res/Gamedev/: enter-the-editor.md  introducing-ospgl.md  roadway-to-release.md  two-years-of-progress.md
dev/res/Math/: vortex-dynamics-1.md
dev/res/Mathematics/: dirac-delta.md  fourier1.md  solar-sail.md
dev/res/OSP/: enter-the-editor.md  roadway-to-release.md
dev/res/Other/: solar-sail.md
dev/res/theme/: category.html  index.html  (+2 more)
dev/src/: Generator.cpp  Generator.h  Main.cpp  Post.cpp  Post.h  Theme.cpp  Theme.h
res/OSP/: models-and-vehicles.md  ospgl-progress.md
res/theme/: category.html  index.html  list.html  post.html
src/: Generator.cpp  Main.cpp  Post.cpp  util.h
visualizations/vortex-dynamics/: base.js  viz1.js
(+5 files in other folders)
